cilium/cilium-host-firewall/allow.apiserver-access.networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-apiserver-access

spec:
  description: Allow access to Kubernetes API Server in Control Plane nodes
  nodeSelector:
    matchLabels:
      node-role.kubernetes.io/control-plane: ""
  ingress:
    - toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
