cilium/cilium-host-firewall/allow.control-plane-node-ssh.networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-control-plane-node-ssh

spec:
  description: Allow SSH access on Control Plane nodes
  nodeSelector:
    matchLabels:
      node-role.kubernetes.io/control-plane: ""
  ingress:
    - toPorts:
        - ports:
            - port: "22"
              protocol: TCP
